--- a/Client/package.json
+++ b/Client/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^19.1.0",
     "react-fontawesome": "^1.7.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.7.0"
+    "react-router-dom": "^7.7.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
